# spark-history-server-k8s-operator

./: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  charmcraft.yaml  config.yaml  difference.txt  metadata.yaml  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yaml  on_pull_request.yaml  release.yaml  sync_issue_to_jira.yaml  tiobe_scan.yaml
lib/charms/data_platform_libs/v0/: data_interfaces.py  object_storage.py  s3.py
lib/charms/oathkeeper/v0/: auth_proxy.py
src/: charm.py  config.py  constants.py  models.py  workload.py
src/alert_rules/prometheus/: history_metrics.rules
src/common/: k8s.py  models.py  workload.py
src/core/: context.py  domain.py  domain_dataclasses.py  domain_dataclasses.py.bck  state.py  workload.py
src/events/: azure_storage.py  base.py  history_server.py  ingress.py  s3.py
src/grafana_dashboards/: jvm-metrics.json
src/managers/: azure_storage.py  history_server.py  s3.py  tls.py
tests/integration/: conftest.py  setup_s3_bucket_for_history_server.py  test_charm.py  test_charm_azure.py  test_charm_azure_b.py  test_charm_bundle.py  test_charm_logs.py  test_charm_tls.py  test_helpers.py  types.py
tests/integration/setup/: get_image_metadata.sh  iam-bundle.yaml  lines.txt  run_spark_job _tls.sh  run_spark_job.sh  run_spark_job_tls.sh  setup_minio.sh  setup_spark.sh  setup_spark_azure.sh
tests/unit/: conftest.py  test_charm.py  test_component_azure.py  test_component_s3.py
